scripts/deployment/grpc-sample/kubernetes-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-grpc-server
  name: go-grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-grpc-server
  template:
    metadata:
      labels:
        app: go-grpc-server
    spec:
      containers:
      - image: divyanshus/greeter-server:latest
        name: greeter-server
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-grpc-server
  name: go-grpc-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 50051
  selector:
    app: go-grpc-server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: grpctest.dev.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-grpc-greeter-server
            port:
              number: 80
